98-bookinfo-layered/01-networkpolicy/01-frontend/00-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: ossm-bookinfo-fe
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
