98-bookinfo-layered/01-networkpolicy/01-frontend/03-allow-to-mgw.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-mgw
  namespace: ossm-bookinfo-fe
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: 
        matchLabels:
          #kubernetes.io/metadata.name: ossm-bookinfo-middle
          layer: mgw
          app: bookinfo
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
